[project]
name = "git-helpers"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
gg = "gg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gg"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
